// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render checkbox with label 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: transparent;
  border-color: hsla(214,18%,69%,1);
}

.c5 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin-left: 4px;
}

.c10 {
  margin-left: 24px;
}

.c7 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c9 {
  color: hsla(218,89%,51%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c3:hover + div,
.c3:focus + div {
  border-color: hsla(214,18%,69%,1);
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c8 {
  padding: 0;
  background-color: transparent;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  cursor: pointer;
  display: inline-block;
  border-radius: 2px;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c8 .content-container {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 2px;
}

.c8:focus .content-container {
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c8 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
    >
      <div
        class="c1"
        display="flex"
      >
        <div
          class="c2"
          display="flex"
        >
          <input
            aria-checked="false"
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="c3"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  fill="hsla(220, 27%, 98%, 1)"
                  fill-rule="evenodd"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
          />
          <div
            class="c7"
            color="surface.text.subtle.lowContrast"
            font-family="text"
            font-size="100"
            font-weight="regular"
          >
            I accept 
            <a
              aria-disabled="false"
              class="c8"
              cursor="pointer"
              data-blade-component="link"
              href="#"
              role="link"
            >
              <div
                class="c2 content-container"
                display="flex"
              >
                <div
                  class="c9"
                  color="action.text.link.default"
                  font-size="100"
                  font-weight="bold"
                >
                  Terms and Conditions
                </div>
              </div>
            </a>
          </div>
        </div>
        <div
          class="c10"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should set disabled state with isDisabled 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: transparent;
  border-color: hsla(216,15%,54%,0.18);
}

.c5 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin-left: 4px;
}

.c8 {
  margin-left: 24px;
}

.c7 {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
    >
      <div
        class="c1"
        display="flex"
      >
        <div
          class="c2"
          display="flex"
        >
          <input
            aria-checked="false"
            aria-disabled="true"
            aria-invalid="false"
            aria-required="false"
            class="c3"
            disabled=""
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  fill="hsla(214, 18%, 69%, 1)"
                  fill-rule="evenodd"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
          />
          <div
            class="c7"
            color="surface.text.placeholder.lowContrast"
            font-family="text"
            font-size="100"
            font-weight="regular"
          >
            Remember password
          </div>
        </div>
        <div
          class="c8"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should set error state with validationState 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(9,91%,56%,0.09);
  border-color: hsla(8,73%,47%,1);
}

.c5 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin-left: 4px;
}

.c8 {
  margin-left: 24px;
}

.c9 {
  margin-top: 4px;
}

.c10 {
  margin-right: 4px;
}

.c7 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(8,73%,47%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
    >
      <div
        class="c1"
        display="flex"
      >
        <div
          class="c2"
          display="flex"
        >
          <input
            aria-checked="false"
            aria-disabled="false"
            aria-errormessage="checkbox-19-errortext-21"
            aria-invalid="true"
            aria-required="false"
            class="c3"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
          >
            <div
              class=""
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  fill="hsla(220, 27%, 98%, 1)"
                  fill-rule="evenodd"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c5"
              style="opacity: 0; position: absolute; display: flex;"
            />
          </div>
          <div
            class="c6"
          />
          <div
            class="c7"
            color="surface.text.subtle.lowContrast"
            font-family="text"
            font-size="100"
            font-weight="regular"
          >
            Remember password
          </div>
        </div>
        <div
          class="c8"
        />
      </div>
    </label>
    <div
      class="c9"
    >
      <span
        style="display: flex; flex-direction: row; align-items: center; word-break: break-all;"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="12px"
          viewBox="0 0 24 24"
          width="12px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            fill="hsla(8, 73%, 47%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            fill="hsla(8, 73%, 47%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            fill="hsla(8, 73%, 47%, 1)"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="c10"
        />
        <span
          class="c11"
          color="feedback.text.negative.lowContrast"
          font-family="text"
          font-size="50"
          font-style="italic"
          id="checkbox-19-errortext-21"
        >
          This has to be checked
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> should set to indeterminate state of checkbox 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
}

.c5 {
  -webkit-animation: byNIqG 150ms cubic-bezier(0,0,0.2,1);
  animation: byNIqG 150ms cubic-bezier(0,0,0.2,1);
}

.c6 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin-left: 4px;
}

.c9 {
  margin-left: 24px;
}

.c8 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c3:focus + div {
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c3:hover + div,
.c3:focus + div {
  border-color: hsla(223,95%,48%,1);
  background-color: hsla(223,95%,48%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    class=""
    data-blade-component="checkbox"
  >
    <label
      class="c0"
    >
      <div
        class="c1"
        display="flex"
      >
        <div
          class="c2"
          display="flex"
        >
          <input
            aria-checked="true"
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="c3"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="c4"
          >
            <div
              class="c5"
              style="opacity: 1; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                  fill="hsla(220, 27%, 98%, 1)"
                  fill-rule="evenodd"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
            <div
              class="c6"
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="12px"
                viewBox="0 0 8 8"
                width="12px"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.90237 1.76413C7.03254 1.89431 7.03254 2.10536 6.90237 2.23554L3.2357 5.90221C3.10553 6.03238 2.89447 6.03238 2.7643 5.90221L1.09763 4.23554C0.967456 4.10536 0.967456 3.89431 1.09763 3.76414C1.22781 3.63396 1.43886 3.63396 1.56904 3.76414L3 5.1951L6.43096 1.76413C6.56114 1.63396 6.77219 1.63396 6.90237 1.76413Z"
                  fill="hsla(220, 27%, 98%, 1)"
                  fill-rule="evenodd"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="0.5"
                />
              </svg>
            </div>
          </div>
          <div
            class="c7"
          />
          <div
            class="c8"
            color="surface.text.subtle.lowContrast"
            font-family="text"
            font-size="100"
            font-weight="regular"
          >
            Remember password
          </div>
        </div>
        <div
          class="c9"
        />
      </div>
    </label>
  </div>
</div>
`;
